<resources>
    <string name="app_name">PokemonApp</string>
    <string name="hp">Hit Points</string>
    <string name="defense">Defense</string>
    <string name="attack">Attack</string>
    <string name="special_attack">Special-Attack</string>
    <string name="special_defense">Special-Defense</string>
    <string name="speed">Speed</string>
    <string name="pokemon_bio">Pokemon Bio</string>
    <string name="pokemon_type">Pokemon Type:</string>
    <string name="pokemon_weight">Pokemon Weight:</string>
    <string name="pokemon_height">Pokemon Height:</string>
    <string name="abilities">Abilities</string>
    <string name="pokeAbilitiesList">pokeAbilitiesList</string>
    <string name="pokeLearnedMoves">pokeLearnedMoves</string>
    <string name="learned_moves">Learned Moves</string>
    <string name="base_xp">Base XP:</string>
    <string name="bio">Bio</string>
    <string name="stats">Stats</string>
    <string name="evolutions">Evolutions</string>
    <string name="pokemon_flavor_text">Flavor text:</string>
    <string name="gen1">Generation I</string>
    <string name="gen2">Generation II</string>
    <string name="gen3">Generation III</string>
    <string name="gen4">Generation IV text:</string>
    <string name="gen5">Generation V text:</string>
    <string name="gen6">Generation VI text:</string>
    <string name="gen7">Generation VII text:</string>
    <string name="gen8">Generation VIII text:</string>
    <string name="generations">Generations</string>
</resources>